m/c/xwing.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: deathstar
  annotations:
    io.cilium/global-service: "true"
spec:
  type: ClusterIP
  ports:
    - port: 80
  selector:
    org: empire
    class: deathstar
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spaceship
spec:
  selector:
    matchLabels:
      name: spaceship
      org: empire
      class: spaceship
  replicas: 4
  template:
    metadata:
      labels:
        name: spaceship
        org: empire
        class: spaceship
    spec:
      containers:
        - name: spaceship
          image: docker.io/tgraf/netperf:v1.0
          imagePullPolicy: IfNotPresent
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xwing
spec:
  selector:
    matchLabels:
      name: xwing
      org: alliance
      class: spaceship
  replicas: 3
  template:
    metadata:
      labels:
        name: xwing
        org: alliance
        class: spaceship
    spec:
      containers:
        - name: spaceship
          image: docker.io/tgraf/netperf:v1.0
          imagePullPolicy: IfNotPresent
