m/c/deathstar.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: deathstar
  annotations:
    io.cilium/global-service: "true"
spec:
  type: ClusterIP
  ports:
    - port: 80
  selector:
    org: empire
    class: deathstar
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spaceship
spec:
  selector:
    matchLabels:
      name: spaceship
      org: empire
      class: spaceship
  replicas: 4
  template:
    metadata:
      labels:
        name: spaceship
        org: empire
        class: spaceship
    spec:
      containers:
        - name: spaceship
          image: docker.io/tgraf/netperf:v1.0
          imagePullPolicy: IfNotPresent
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deathstar
spec:
  selector:
    matchLabels:
      name: deathstar
      org: empire
      class: deathstar
  replicas: 3
  template:
    metadata:
      labels:
        name: deathstar
        org: empire
        class: deathstar
    spec:
      containers:
        - name: deathstar
          image: docker.io/cilium/starwars:v1.0
          imagePullPolicy: IfNotPresent
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "deathstar-api-protection"
spec:
  endpointSelector:
    matchLabels:
      class: deathstar
      org: empire
  ingress:
    - fromEndpoints:
        - matchLabels:
            org: alliance
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
          rules:
            http:
              - method: "PUT"
                path: "/v1/exhaust-port$"
                headers:
                  - "X-Has-Force: True"
    - fromEndpoints:
        - matchLabels:
            org: empire
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
          rules:
            http:
              - method: "GET"
                path: "/v1/"
