m/c/policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
description: "Protect deathstar APIs"
metadata:
  name: "deathstar-api-protection"
spec:
  endpointSelector:
    matchLabels:
      class: deathstar
      org: empire
      io.cilium.k8s.policy.cluster: coder-amanibhavam-school
  ingress:
    - fromEndpoints:
        - matchLabels:
            class: spaceship
            io.cilium.k8s.policy.cluster: coder-amanibhavam-class
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
          rules:
            http:
              - method: "GET"
                path: "/v1/"
              - method: "POST"
                path: "/v1/request-landing$"
              - method: "PUT"
                path: "/v1/exhaust-port$"
                headers:
                  - "X-Has-Force: True"
